ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Participant__c/EU_Participant__c.object-meta.xml
<CustomObject>
    <label>Participant</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>