ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Participant__c/fields/EU_BypassValidation__c.field-meta.xml
<CustomField>
    <fullName>EU_BypassValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to exclude Process Builder changes from validation rules</description>
    <label>Bypass Validation</label>
    <type>Checkbox</type>
</CustomField>