ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Participant__c/fields/EU_Createdfromopportunity__c.field-meta.xml
<CustomField>
    <fullName>EU_Createdfromopportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to indicate which is the automatically created participant on an opportunity</description>
    <inlineHelpText>This participant was created automatically. To change it, please change the account and contact on the opportunity.</inlineHelpText>
    <label>Created from Opportunity</label>
    <type>Checkbox</type>
</CustomField>