ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Participant__c/fields/EU_Role__c.field-meta.xml
<CustomField>
    <fullName>EU_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tendering main contractor</fullName>
            </value>
            <value>
                <fullName>Main Contractor</fullName>
            </value>
            <value>
                <fullName>Tendering sub contractor</fullName>
            </value>
            <value>
                <fullName>Sub contractor</fullName>
            </value>
            <value>
                <fullName>Architect/Specifier</fullName>
            </value>
            <value>
                <fullName>Advisory bureau</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Client/Owner</fullName>
            </value>
            <value>
                <fullName>Strategic Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>