ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/EU_Participant__c/validationRules/Created_from_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Created_from_Opportunity</fullName>
    <active>true</active>
    <description>If &quot;Created from opportunity&quot; = TRUE, then Account and Contact may not be updated (manually by a user)</description>
    <errorConditionFormula>AND(
 EU_Createdfromopportunity__c = True,
  EU_BypassValidation__c  = False,
OR (
 ISCHANGED( EU_Contact__c ) ,
 ISCHANGED(  EU_Account__c ) 
)
)</errorConditionFormula>
    <errorDisplayField>EU_Account__c</errorDisplayField>
    <errorMessage>You cannot change this participant manually, please update this info in the Opportunity itself.</errorMessage>
</ValidationRule>